--- a/jquery/index.html
+++ b/jquery/index.html
@@ -9,7 +9,7 @@
 
 <body>
 
-  <h1>Hello.</h1>
+  <h1 class="big-title margin-50">Hello.</h1>
   <img src="drum.png" alt="">
   <a href="https://www.google.com">Search</a>
   <button>Click Me</button>
@@ -17,6 +17,8 @@
   <button>Click Me</button>
   <button>Click Me</button>
   <button>Click Me</button>
+
+  <input type="text" name="" value="">
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="index.js" charset="utf-8"></script>
