--- a/Newsletter-Signup/signup.html
+++ b/Newsletter-Signup/signup.html
@@ -20,7 +20,7 @@
   </head>
 
   <body class="text-center">
-    <form action="/" class="form-signin" method="post">
+    <form action="/" class="form-signin" method="POST">
       <img class="mb-4" src="images/gearlogo.png" alt="" width="72" height="72">
       <h1 class="h3 mb-3 font-weight-normal">Signup to My Newsletter!</h1>
 
